:lipstick: [bug] main page horizontal scroll

--- a/review-summary/src/pages/Home.scss
+++ b/review-summary/src/pages/Home.scss
@@ -19,7 +19,6 @@
 
     .mainBottom {
         margin: 0;
-        width: 100vw;
         max-width: 480px;
 
         .shareContainer {
@@ -61,7 +60,6 @@
         justify-content: flex-start;
         align-items: flex-start;
         gap: 8px;
-        width: 100vw;
         max-width: 480px;
 
         height: 100px;
